# BaseTool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
ShareLib/Mac/OpenSSL/include/openssl/: opensslv.h
ShareLib/Mac/OpenSSL/lib/: libcrypto.1.1.dylib  libcrypto.3.dylib  libssl.1.1.dylib  libssl.3.dylib
ShareLib/Mac/Poco/lib/Release/: README.md
Tool/Buffer/: Buffer.h
Tool/Config/: BTConfig.h
